Fix row-gap for tags in global nav

--- a/source/wakaba.css
+++ b/source/wakaba.css
@@ -210,6 +210,7 @@ body > nav #global_nav_tags {
     margin-top: 16px;
     margin-bottom: 16px;
     flex-direction: row-reverse;
+    row-gap: 16px;
 }
 
 /***************************************************************************/
